Fixed input being too large

--- a/src/assets/scss/sections/_contact.scss
+++ b/src/assets/scss/sections/_contact.scss
@@ -25,6 +25,7 @@ section#contact {
                 width: 100%;
                 height: 48px;
                 font-family: $heading-font;
+                box-sizing: border-box;
                 font-size: 26px;
                 border: none;
                 border-radius: 6px;
